--- a/app.json
+++ b/app.json
@@ -14,8 +14,7 @@
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#283C0A"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
